--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Carousel Example</title>
+    <title>Aiden's Brain Randomnise</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=5">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -12,28 +12,55 @@
 <body>
 
     <div class="container">
-        <h2>Platonic Solids</h2>
+        <h2>The Randomnise That Equals My Brain(small disclaimer Chicago fire Belongs To Dick Wolf And NBC All rights belong to them, 911 belongs to FOX all rights belong to them,S.W.A.T belongs to CBS Please Go Support Them.)</h2>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                 <li data-target="#myCarousel" data-slide-to="1"></li>
                 <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="3"></li>
+                <li data-target="#myCarousel" data-slide-to="4"></li>
+                <li data-target="#myCarousel" data-slide-to="5"></li>
+                <li data-target="#myCarousel" data-slide-to="6"></li>
+                <li data-target="#myCarousel" data-slide-to="7"></li>
+                <li data-target="#myCarousel" data-slide-to="8"></li>
+                <li data-target="#myCarousel" data-slide-to="9"></li>
             </ol>
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="./img/platonic-pyramid.gif" alt="Pyramid">
+                    <img src="./img/Rotator.gif" alt="Rotator">
                 </div>
 
                 <div class="item">
-                    <img src="./img/platonic-octahedron.gif" alt="Octahedron">
+                    <img src="./img/RUN FOR THE HILLS.gif" alt="Truck With Lights">
                 </div>
 
                 <div class="item">
-                    <img src="./img/platonic-icosahedron.gif" alt="Icosahedron">
+                    <img src="./img/d20 thingy.gif" alt="D20">
                 </div>
+                
+                <div class="item">
+                    <img src="./img/Have A Emergency Light.gif" alt="SIngular Ligths">
+                </div>
+                <div class="item">
+                    <img src="./img/LEts do this.gif" alt="SWAT leaving Bearcat">
+                </div>
+                <div class="item">
+                    <img src="./img/Pullin Out.gif" alt="D20">
+                </div>
+                <div class="item">
+                    <img src="./img/Gettin Bunkers On.gif" alt="D20">
+                </div>
+                <div class="item">
+                    <img src="./img/Truck Pullin Out.gif" alt="D20">
+                </div>
+                <div class="item">
+                    <img src="./img/wierd driver.gif" alt="D20">
+                </div>
+                
             </div>
 
             <!-- Left and right controls -->
